# zebra_day

./: Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yaml
docker/: Dockerfile  docker-compose.yml
docs/: uid_screed_light.md  zebra_day_ui_guide.md
etc/: current_style.txt  printer_config.template.json
etc/label_styles/: plate_1inX0.25in.zpl  test_2inX1in.zpl  tube_2inX0.3in.zpl  tube_2inX1in.zpl
src/zebra_day/: print_mgr.py
static/: beyonce.css  datschund.css  datschund_on_moon.css  medicalsci.css  popday.css  popday_dog.css  style.css  tron.css
tests/: test_creating_labels.py  test_example.py  test_setup_printers_json.py  test_setup_printers_json.py~  test_web_server.py
zebra_day/: cmd_mgr.py  print_mgr.py
zebra_day.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
zebra_day/docs/: hardware_config_guide.md  programatic_guide.md  uid_screed_light.md  zebra_day_ui_guide.md
zebra_day/etc/: printer_config.json  printer_config.template.json  tmp_printers117.json
zebra_day/etc/label_styles/: corner_square.zpl  cornersStripOf4Squares_1inX1in.zpl  corners_1inX2in.zpl  corners_20cmX30cm.zpl  corners_smallTube.zpl  generic_2inX1in.zpl  plate_1inX0.25in.zpl  plate_1inX0.25inHD.zpl  smallTubeDot_ninXnin.zpl  smallTubeWdotHD_prod.zpl  smallTubeWdot_corners.zpl  smallTubeWdot_prod.zpl  smallTubeWdot_prodAlt1.zpl  smallTubeWdot_prodAlt1b.zpl  smallTubeWdot_prodV2.zpl  smallTubeWdot_reagent.zpl  smallTube_1inX0.3in.zpl  stripOf4Squares_1inX1in.zpl  test_2inX1in.zpl  test_800dX800dCoordinateArray.zpl  tube_2inX0.3in.zpl  (+5 more)
zebra_day/static/: datschund.css  datschund_on_moon.css  general.css  moar_zebra.css  oakland.css  petrichor.css  popday_dark.css  popday_daylily.css  style.css  triangles.css  zebras.css
(+1 files in other folders)
