[project]
name = "zebra_day"
version = "0.0.37"
description = "A Python library to manage a zebra printer fleet and an api for ZPL print requests."
authors = [
  { name = "John Major", email = "john@daylilyinformatics.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = "==3.10"
dependencies = [
"yaml_config_day",
"requests",
"pytz",
"cherrypy",
"ipython",
 ]

[project.urls]
"Homepage" = "https://github.com/Daylily-Informatics/zebra_day"
"Bug Tracker" = "https://github.com/Daylily-Informatics/zebra_day"

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you need NOT include the following line.
namespaces = true
where = ["src"]